--- a/app/assets/stylesheets/components/header.scss
+++ b/app/assets/stylesheets/components/header.scss
@@ -6,4 +6,13 @@ header {
     font-family: 'Zilla Slab', serif;
     font-size: 1.25rem;
   }
+
+  &__illustration {
+    max-height: 100vh;
+    max-width: 80%;
+    position: absolute;
+      top: 0;
+      right: 0;
+    z-index: -1;
+  }
 }
