--- a/app/assets/stylesheets/components/header.scss
+++ b/app/assets/stylesheets/components/header.scss
@@ -2,6 +2,10 @@
 header {
   width: 50%;
 
+  @media screen and (max-width: $screen-mobile) {
+    width: 100%;
+  }
+
   p {
     font-family: 'Zilla Slab', serif;
     font-size: 1.25rem;
