--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
     <title>Cincinnati Ruby Brigade</title>
     <!-- Google Fonts -->
     <link href='http://fonts.googleapis.com/css?family=Cabin:400,400italic,600italic,700italic' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Included CSS Files -->
     <%= stylesheet_link_tag 'application', media: 'screen' %>
     <!--[if lt IE 9]>
