Adjust twitter feed height and add header

--- a/app/assets/stylesheets/base/utilities.scss
+++ b/app/assets/stylesheets/base/utilities.scss
@@ -1,3 +1,16 @@
+// FLEX
+.u-flex {
+  display: flex;
+    align-items: baseline;
+    gap: $space-md;
+
+  &__justify {
+    &--between {
+      justify-content: space-between;
+    }
+  }
+}
+
 .u-text {
   &--sm {
     font-size: $font-size-sm;
