add utility flex class

--- a/app/assets/stylesheets/base/utilities.scss
+++ b/app/assets/stylesheets/base/utilities.scss
@@ -4,6 +4,15 @@
   }
 }
 
+.u-flex {
+  align-items: start;
+  display: flex;
+}
+
+.u-icon {
+  width: 30px;
+}
+
 // MARGIN
 .u-push {
   margin: $space-md;
