add styles to the contact us form

--- a/app/assets/stylesheets/base/variables.scss
+++ b/app/assets/stylesheets/base/variables.scss
@@ -12,6 +12,8 @@ $white: #ffffff;
 $gray: #C7C7C7;
 $black: #333;
 $color-info: #F9BC51;
+$red: #e71f20;
+$dark-red: #920410;
 
 $border: 1px solid $gray;
 $border-radius: 10px;
