style sponsorship section for desktop

--- a/app/assets/stylesheets/base/utilities.scss
+++ b/app/assets/stylesheets/base/utilities.scss
@@ -8,6 +8,16 @@
     &--between {
       justify-content: space-between;
     }
+
+    &--end {
+      justify-content: end;
+    }
+  }
+
+  &__align {
+    &--start {
+      align-items: flex-start;
+    }
   }
 }
 
