--- a/app/assets/stylesheets/base/variables.scss
+++ b/app/assets/stylesheets/base/variables.scss
@@ -2,6 +2,7 @@ $screen-mobile: 480px;
 $screen-tablet: 768px;
 $screen-desktop: 1200px;
 
+$space-xxs: .3rem;
 $space-xs: .5rem;
 $space-sm: 1rem;
 $space-md: 2rem;
