--- a/app/assets/stylesheets/components/header.scss
+++ b/app/assets/stylesheets/components/header.scss
@@ -1,6 +1,5 @@
-.header,
-header {
-  width: 50%;
+.header {
+  width: 45%;
 
   @media screen and (max-width: $screen-mobile) {
     margin-top: 3rem;
