--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -64,7 +64,7 @@
         <%= f.text_field :email, :placeholder => "Email Address" %>
         <%= f.text_field :subject, :placeholder => "Subject" %>
         <%= f.text_area :message, :placeholder => "Message", :rows => 5, :class => "message" %>
-        <input class="button" type="submit" value="Submit">
+        <input class="button u-push__top--sm" type="submit" value="Submit">
       </div>
     <% end %>
   </article>
