--- a/app/assets/stylesheets/components/events.scss
+++ b/app/assets/stylesheets/components/events.scss
@@ -14,6 +14,7 @@
 
 .event-header {
   padding-top: 0;
+  gap: $space-xs !important;
 
   @media screen and (max-width: $screen-tablet) {
     padding-top: $space-sm;
@@ -56,4 +57,3 @@
     font-size: .9rem;
   }
 }
-
