Add link to discord

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -69,15 +69,14 @@
     <% end %>
   </article>
   <article class="offset-col__right">
-    <div class="u-flex u-flex__justify--between">
-      <h2>Stay in the loop</h2>
-      <%= link_to("Follow Us", 'https://twitter.com/cincinnatirb', target: "_blank")%>
+    <h2>Stay in the loop</h2>
+    <p>Follow along and join the conversation to get plugged-in and stay connected!</p>
+    <div class="u-push__bottom">
+      <%= link_to("Twitter", 'https://twitter.com/cincinnatirb', target: "_blank", class: "button")%>
+      <%= link_to("Discord", 'https://discord.gg/dBjVX9mNB4', target: "_blank", class: "button") %>
     </div>
-    <a class="twitter-timeline" data-height="800" data-theme="light" href="https://twitter.com/cincinnatirb?ref_src=twsrc%5Etfw">Tweets by cincinnatirb</a>
+
+    <a class="twitter-timeline" data-height="600" data-theme="light" href="https://twitter.com/cincinnatirb?ref_src=twsrc%5Etfw">Tweets by cincinnatirb</a>
     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   </article>
 </section>
-<ul>
-  <li><a href='https://twitter.com/#!/cincinnatirb' target='_blank'>Follow us on Twitter!</a></li>
-  <li><a href='http://www.facebook.com/events/162252363797871/' target='_blank'>Be Our Friend on Facebook!</a></li>
-</ul>
