Fix responsive sponsorship

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,6 +10,7 @@
 "components/events",
 "components/form",
 "components/header",
+"components/intro",
 "components/logo",
 "components/speaker",
 "components/sponsorship",
