--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,5 +1,5 @@
 <%= image_tag('cincyrb-illustration.svg', aria_hidden: 'true', class: 'header__illustration') %>
-<header class="u-flex u-flex__justify--between u-flex__align--start">
+<header>
   <div>
     <%= image_tag('cincyrb-icon.png', alt: 'Cincy.rb logo', class: 'logo') %>
     <h1>Cincy.rb</h1>
@@ -8,14 +8,13 @@
     <div class="sponsorship__sponsor">
       <span class="u-push__right--xs"><i class="material-icons">favorite_border</i></span>
       SPONSORED BY
-      <span><%= image_tag('gaslight_mark-inverse.png', alt: 'Gaslight logo', class: 'logo') %></span>
+      <span class="sponsorship__logo" aria-hidden="true"></span>
       GASLIGHT
     </div>
     <a class='become-a-sponsor' href='mailto:hello@teamgaslight.com'><i class="material-icons u-text--sm u-push__right--xxs">add</i> Become a Sponsor</a>
   </div>
-
 </header>
-<section class="header">
+<section class="intro">
   <p>
     <strong>We are Cincinnati Ruby Brigade.</strong>
     A group of local developers who get together to talk Ruby, share code, and meet new people.
