--- a/app/assets/stylesheets/components/sponsorship.scss
+++ b/app/assets/stylesheets/components/sponsorship.scss
@@ -4,6 +4,12 @@
     color: $white;
     flex-direction: column;
 
+  @media screen and (max-width: $screen-mobile) {
+    align-items: flex-start;
+    color: $black;
+    margin-top: $space-md;
+  }
+
   &__sponsor{
     align-items: center;
     display: flex;
@@ -11,9 +17,24 @@
     text-transform: capitalize;
     font-size: .8rem;
     letter-spacing: 1px;
+    white-space: nowrap;
 
     img {
       max-width: 50px;
+    }
+  }
+
+  &__logo {
+    background-image: url('/assets/gaslight_mark-inverse.png');
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 50px;
+    height: 50px;
+
+    @media screen and (max-width: $screen-mobile) {
+      background-image: url('/assets/gaslight_mark.png');
+      width: 35px;
     }
   }
 
@@ -27,6 +48,10 @@
 
     &:hover {
       text-decoration: underline;
+    }
+
+    @media screen and (max-width: $screen-mobile) {
+      color: $black;
     }
   }
 }
