--- a/app/assets/stylesheets/base/utilities.scss
+++ b/app/assets/stylesheets/base/utilities.scss
@@ -1,3 +1,15 @@
+// COLOR
+.u-color {
+  &--red {
+    color: $dark-red;
+  }
+}
+
+// ALIGNMENT
+.u-middle {
+  vertical-align: middle;
+}
+
 // FLEX
 .u-flex {
   display: flex;
