--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,12 +39,8 @@
   <body>
     <%= yield %>
     <footer>
-      <div class='container row'>
-        <p>
-          Designed and built by
-          <a href='http://www.teamgaslight.com' target='_blank'>Gaslight</a>
-        </p>
-      </div>
+      Designed and built with <i class="material-icons u-middle u-color--red" aria-label="love">favorite</i> by
+      <a href='http://www.teamgaslight.com' target='_blank'>Gaslight</a>
     </footer>
     <!-- Included JS Files -->
   </body>
