--- a/app/views/admin/past_events/index.html.erb
+++ b/app/views/admin/past_events/index.html.erb
@@ -22,4 +22,4 @@
 
 <br>
 
-<%= link_to 'New Admin Past Event', new_admin_past_event_path %>
+<%= link_to 'New Past Event', new_admin_past_event_path %>
