--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -14,7 +14,7 @@
     <a class='become-a-sponsor' href='mailto:hello@teamgaslight.com'><i class="material-icons u-text--sm u-push__right--xxs">add</i> Become a Sponsor</a>
   </div>
 </header>
-<section class="intro">
+<section class="intro u-push__top--lg">
   <p>
     <strong>We are Cincinnati Ruby Brigade.</strong>
     A group of local developers who get together to talk Ruby, share code, and meet new people.
@@ -47,7 +47,6 @@
     <article class="event">
       <%= link_to past_events_path do %>
         View Past Events
-        <i class="material-icons u-text--sm">open_in_new</i>
       <% end %>
     </article>
   </div>
