Style past events and speakers

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,7 @@
 "components/header",
 "components/intro",
 "components/logo",
+"components/past-event",
 "components/speaker",
 "components/sponsorship",
 "components/video";
