--- a/app/views/past_events/_past_events.html.erb
+++ b/app/views/past_events/_past_events.html.erb
@@ -1,36 +1,28 @@
-<section id='past-events'>
+<section class="u-grid u-push__top--lg">
   <%- @past_events.each do |event| %>
-  <section id='video'>
-    <div class='containerVideo'>
-      <div class='row'>
-        <h2><%= event.date ? "Past Meeting from #{event.date.strftime("%-m/%-d/%Y")}" : "Past Meeting" %></h2>
-        <p><%= event.topic %></p>
-        <div class='videos'>
-          <%- event.videos.each do |video| %>
-          <div class='video'>
-            <iframe src="<%= video.url %>" width="100%"></iframe>
-          </div>
-          <%- end %>
+    <article class="past-event">
+      <svg class="past-event__blob" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 310 350">
+        <path d="M156.4,339.5c31.8-2.5,59.4-26.8,80.2-48.5c28.3-29.5,40.5-47,56.1-85.1c14-34.3,20.7-75.6,2.3-111  c-18.1-34.8-55.7-58-90.4-72.3c-11.7-4.8-24.1-8.8-36.8-11.5l-0.9-0.9l-0.6,0.6c-27.7-5.8-56.6-6-82.4,3c-38.8,13.6-64,48.8-66.8,90.3c-3,43.9,17.8,88.3,33.7,128.8c5.3,13.5,10.4,27.1,14.9,40.9C77.5,309.9,111,343,156.4,339.5z"/>
+      </svg>
+      <h3 class="past-event__topic"><%= event.topic %></h3>
+      <p class="past-event__date"><%= event.date ? event.date.strftime("%-m/%-d/%Y") : "" %></p>
+      <p class="past-event__description"><%= event.description ? event.description : "" %></p>
+      <%- event.videos.each do |video| %>
+        <div class="past-event__video">
+          <iframe src="<%= video.url %>" width="100%"></iframe>
         </div>
-      </div>
-    </div>
-  </section>
-  <div class='event'>
-    <div class='speakers'>
-      <%- event.speakers.each do |speaker| %>
-      <div class='speaker'>
-        <div class='speaker-headshot'>
-          <%= image_tag(gravatar_url(speaker.email)) %>
-        </div>
-        <div class='speaker-text'>
-          <h3 class='speaker-name'><%= speaker.name %></h3>
-          <div class='speaker-bio'>
-            <p><%= speaker.bio %></p>
-          </div>
-        </div>
-      </div>
       <%- end %>
-    </div>
-  </div>
+      <div class='past-event__speakers'>
+        <%- event.speakers.each do |speaker| %>
+          <div class='speaker'>
+            <div class='speaker__headshot'>
+              <%= image_tag(gravatar_url(speaker.email)) %>
+            </div>
+            <h4 class='speaker__name'><%= speaker.name %></h4>
+            <!-- <p class="speaker__bio"><%= speaker.bio %></p> -->
+          </div>
+        <%- end %>
+      </div>
+    </article>
   <%- end %>
 </section>
