--- a/app/assets/stylesheets/components/header.scss
+++ b/app/assets/stylesheets/components/header.scss
@@ -4,7 +4,7 @@ header {
     justify-content: space-between;
     align-items: start;
 
-  @media screen and (max-width: $screen-mobile) {
+  @media screen and (max-width: $screen-tablet) {
     display: block;
   }
 
@@ -16,7 +16,7 @@ header {
       right: 0;
     z-index: -1;
 
-    @media screen and (max-width: $screen-mobile) {
+    @media screen and (max-width: $screen-tablet) {
       top: -26px;
     }
   }
