--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,12 @@
   </head>
 
   <body>
+    <% if current_admin_user && /^\/admin/.match(request.path) %>
+      <%= render 'admin/shared/menu' %>
+    <% end %>
+
     <%= yield %>
+
     <footer>
       Designed and built with <i class="material-icons u-middle u-color--red" aria-label="love">favorite</i> by
       <a href='http://www.teamgaslight.com' target='_blank'>Gaslight</a>
