--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -54,7 +54,7 @@
 <section class="offset-col u-pad__top--xl">
   <article class="offset-col__left">
     <h2>Contact Us</h2>
-    <p>Have a topic idea? Want to present at a Cinci.rb meeting? Have a suggestion? Send us a comment here.</p>
+    <p>Have a topic idea? Want to present at a Cincy.rb meeting? Have a suggestion? Send us a comment here.</p>
     <p class='flash flash_notice'></p>
     <%= form_for Contact.new, url: "/contact_us", :remote => true do |f| %>
       <div class="new_contact">
