--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -45,9 +45,7 @@
       </article>
     <%- end %>
     <article class="event">
-      <%= link_to past_events_path do %>
-        View Past Events
-      <% end %>
+      <%= link_to("View Past Events", past_events_path) %>
     </article>
   </div>
 </section>
