--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,4 +1,4 @@
-<%= image_tag('cincyrb-illustration.svg', aria_hidden: 'true', class: 'header__illustration') %>
+<div class="header__illustration" aria-hidden="true"></div>
 <header>
   <div>
     <%= image_tag('cincyrb-icon.png', alt: 'Cincy.rb logo', class: 'logo') %>
