--- a/app/views/past_events/index.html.erb
+++ b/app/views/past_events/index.html.erb
@@ -1,9 +1,10 @@
+<div class="header__illustration header__illustration--secondary" aria-hidden="true"></div>
 <header>
   <div>
     <%= image_tag('cincyrb-icon.png', alt: 'Cincy.rb logo', class: 'logo') %>
     <h1>Cincy.rb</h1>
   </div>
-  <div class="sponsorship sponsorship--dark">
+  <div class="sponsorship">
     <div class="sponsorship__sponsor">
       <span class="u-push__right--xs"><i class="material-icons">favorite_border</i></span>
       SPONSORED BY
