changed all text instances of gaslight to launch scout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,7 @@
 
     <footer>
       Designed and built with <i class="material-icons u-middle u-color--red" aria-label="love">favorite</i> by
-      <a href='http://www.teamgaslight.com' target='_blank'>Gaslight</a>
+      <a href='http://www.teamgaslight.com' target='_blank'>Launch Scout</a>
     </footer>
     <!-- Included JS Files -->
   </body>
