--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -9,7 +9,7 @@
       <span class="u-push__right--xs"><i class="material-icons">favorite_border</i></span>
       SPONSORED BY
       <span class="sponsorship__logo" aria-hidden="true"></span>
-      GASLIGHT
+      LAUNCH SCOUT
     </div>
     <a class='become-a-sponsor' href='mailto:hello@teamgaslight.com'><i class="material-icons u-text--sm u-push__right--xxs">add</i> Become a Sponsor</a>
   </div>
