change the email contact info from Gaslight to LaunchScout

--- a/app/views/past_events/index.html.erb
+++ b/app/views/past_events/index.html.erb
@@ -11,7 +11,7 @@
       <span class="sponsorship__logo" aria-hidden="true"></span>
       LAUNCH SCOUT
     </div>
-    <a class='become-a-sponsor' href='mailto:hello@teamgaslight.com'><i class="material-icons u-text--sm u-push__right--xxs">add</i> Become a Sponsor</a>
+    <a class='become-a-sponsor' href='mailto:hello@launchscout.com'><i class="material-icons u-text--sm u-push__right--xxs">add</i> Become a Sponsor</a>
   </div>
 </header>
 
