address mixed content issues

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <meta content='width=device-width' name='viewport'>
     <title>Cincinnati Ruby Brigade</title>
     <!-- Google Fonts -->
-    <link href='http://fonts.googleapis.com/css?family=Cabin:400,400italic,600italic,700italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Cabin:400,400italic,600italic,700italic' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Included CSS Files -->
     <%= stylesheet_link_tag 'application', media: 'screen' %>
@@ -23,7 +23,7 @@
     <%= javascript_include_tag 'modernizr-foundation', media: 'screen' %>
     <!-- IE Fix for HTML5 Tags -->
     <!--[if lt IE 9]>
-      <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+      <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
     <!-- Favicon stuff -->
@@ -45,12 +45,12 @@
 
     <footer>
       Designed and built with <i class="material-icons u-middle u-color--red" aria-label="love">favorite</i> by
-      <a href='http://www.teamgaslight.com' target='_blank'>Launch Scout</a>
+      <a href='https://launchscout.com/' target='_blank'>Launch Scout</a>
     </footer>
     <!-- Included JS Files -->
   </body>
 
-  <script src='http://maps.googleapis.com/maps/api/js?key=AIzaSyCA9cUwB8Tzb_hRPdxpUZuH3rF1V6DCvr4&amp;sensor=false&amp;libraries=places'></script>
+  <script src='https://maps.googleapis.com/maps/api/js?key=AIzaSyCA9cUwB8Tzb_hRPdxpUZuH3rF1V6DCvr4&amp;sensor=false&amp;libraries=places'></script>
   <script>
     var _gaq = _gaq || [];
     _gaq.push(['_setAccount', 'UA-25957234-6']);
