--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -7,7 +7,7 @@
   <div class="sponsorship">
     <div class="sponsorship__sponsor">
       <span class="u-push__right--xs"><i class="material-icons">favorite_border</i></span>
-      Sponcered by LAUNCH SCOUT
+      Sponsored by LAUNCH SCOUT
       <span class="sponsorship__logo" aria-hidden="true"></span>
     </div>
     <a class='become-a-sponsor' href='mailto:hello@launchscout.com'><i class="material-icons u-text--sm u-push__right--xxs">add</i> Become a Sponsor</a>
