--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -39,7 +39,7 @@
           <%= Time.at(meeting['time']/1000).strftime('%b %-d') %>
         </div>
         <div class="event__time">
-          <%= Time.at(meeting['time']/1000).strftime('%l:%M %P') %>
+          <%= Time.at(meeting['time']/1000, in: '+09:00').strftime('%l:%M %P') %>
         </div>
       </article>
     <%- end %>
