--- a/app/views/past_events/_past_events.html.erb
+++ b/app/views/past_events/_past_events.html.erb
@@ -1,23 +1,24 @@
-<section class="u-grid u-push__top--lg">
+<section class="past-event u-push__top--lg">
   <%- @past_events.each do |event| %>
-    <article class="past-event">
-      <h3 class="past-event__topic"><%= event.topic %></h3>
-      <p class="past-event__date"><%= event.date ? event.date.strftime("%-m/%-d/%Y") : "" %></p>
-      <p class="past-event__description"><%= event.description ? event.description : "" %></p>
-      <div class='past-event__speakers'>
-        <%- event.speakers.each do |speaker| %>
-          <div class='speaker'>
-            <div class='speaker__headshot'>
-              <%= image_tag(gravatar_url(speaker.email)) %>
-            </div>
-            <h4 class='speaker__name'><%= speaker.name %></h4>
-            <!-- <p class="speaker__bio"><%= speaker.bio %></p> -->
-          </div>
-        <%- end %>
-      </div>
+    <article class=>
       <%- event.videos.each do |video| %>
         <div class="past-event__video">
           <iframe src="<%= video.url %>" width="100%"></iframe>
+        </div>
+      <%- end %>
+      <div class="past-event__date">
+        <p><%= event.date ? event.date.strftime("%-m/%-d/%Y") : "" %></p>
+      </div>
+      <h3 class="past-event__topic"><%= event.topic %></h3>
+      <p class="past-event__description"><%= event.description ? event.description : "" %></p>
+      <div class='past-event__speakers'>
+      <%- event.speakers.each do |speaker| %>
+        <div class='speaker'>
+          <div class='speaker__headshot'>
+            <%= image_tag(gravatar_url(speaker.email)) %>
+          </div>
+          <h4 class='speaker__name'><%= speaker.name %></h4>
+          <!-- <p class="speaker__bio"><%= speaker.bio %></p> -->
         </div>
       <%- end %>
     </article>
