Updated our name to be clickable

--- a/app/views/past_events/index.html.erb
+++ b/app/views/past_events/index.html.erb
@@ -7,8 +7,8 @@
   <div class="sponsorship">
     <div class="sponsorship__sponsor">
       <span class="u-push__right--xs"><i class="material-icons">favorite_border</i></span>
-      Sponsored by LAUNCH SCOUT
-      <span class="sponsorship__logo" aria-hidden="true"></span>
+      <span class="u-push__right--xs">Sponsored by </span> 
+       <a href='https://launchscout.com/' target='_blank'>LAUNCH SCOUT</a>
     </div>
     <a class='become-a-sponsor' href='mailto:hello@launchscout.com'><i class="material-icons u-text--sm u-push__right--xxs">add</i> Become a Sponsor</a>
   </div>
